<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grocery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.grocery.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.grocery.ui.category.categoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.grocery.NewProductsFragment"
        android:label="@string/new_products"
        tools:layout="@layout/fragment_new_products" />

    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.grocery.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />


</navigation>